[gd_scene load_steps=17 format=2]

[ext_resource path="res://Sprites/UiSprite/graines/Attaque/seed_lierre.PNG" type="Texture" id=1]
[ext_resource path="res://Sprites/UiSprite/graines/Attaque/seed_mushroom.PNG" type="Texture" id=2]
[ext_resource path="res://Sprites/UiSprite/graines/Auxiliaire/seed_tournesol.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UiSprite/graines/Biomasse/seed_sequoia.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UiSprite/graines/Soutien/seed_mycelium.PNG" type="Texture" id=5]
[ext_resource path="res://Sprites/UiSprite/graines/Soutien/seed_ronces.PNG" type="Texture" id=6]
[ext_resource path="res://Sprites/UiSprite/graines/Biomasse/seed_eucalyptus.PNG" type="Texture" id=7]
[ext_resource path="res://Font/GretaGrotesk.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Scripts/Ui.gd" type="Script" id=9]
[ext_resource path="res://Sprites/UiSprite/gameplay/pollen_map.png" type="Texture" id=10]
[ext_resource path="res://Sprites/UiSprite/graines/Auxiliaire/seed_consoudes.PNG" type="Texture" id=14]
[ext_resource path="res://Sprites/UiSprite/graines/Biomasse/seed_grass.PNG" type="Texture" id=15]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 70
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 70
font_data = ExtResource( 8 )

[node name="Ui" type="Control"]
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuPrincipale" type="HBoxContainer" parent="."]
margin_right = 1409.0
margin_bottom = 270.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attaque" type="PanelContainer" parent="MenuPrincipale"]
margin_right = 321.0
margin_bottom = 270.0

[node name="NinePatchRect" type="NinePatchRect" parent="MenuPrincipale/Attaque"]
margin_left = 7.0
margin_top = 7.0
margin_right = 314.0
margin_bottom = 263.0

[node name="Titre" type="Label" parent="MenuPrincipale/Attaque"]
margin_left = 7.0
margin_top = 93.0
margin_right = 314.0
margin_bottom = 177.0
custom_fonts/font = SubResource( 1 )
text = "WallAttack"

[node name="Auxiliaire" type="PanelContainer" parent="MenuPrincipale"]
margin_left = 325.0
margin_right = 724.0
margin_bottom = 270.0

[node name="NinePatchRect" type="NinePatchRect" parent="MenuPrincipale/Auxiliaire"]
margin_left = 7.0
margin_top = 7.0
margin_right = 392.0
margin_bottom = 263.0

[node name="Titre" type="Label" parent="MenuPrincipale/Auxiliaire"]
margin_left = 7.0
margin_top = 93.0
margin_right = 392.0
margin_bottom = 177.0
custom_fonts/font = SubResource( 1 )
text = "groundAttack"

[node name="Biomasse" type="PanelContainer" parent="MenuPrincipale"]
margin_left = 728.0
margin_right = 921.0
margin_bottom = 270.0

[node name="NinePatchRect" type="NinePatchRect" parent="MenuPrincipale/Biomasse"]
margin_left = 7.0
margin_top = 7.0
margin_right = 186.0
margin_bottom = 263.0

[node name="Titre" type="Label" parent="MenuPrincipale/Biomasse"]
margin_left = 7.0
margin_top = 49.0
margin_right = 186.0
margin_bottom = 220.0
custom_fonts/font = SubResource( 2 )
text = "Biomass
pollen"

[node name="Soutien" type="PanelContainer" parent="MenuPrincipale"]
margin_left = 925.0
margin_right = 1135.0
margin_bottom = 270.0

[node name="NinePatchRect" type="NinePatchRect" parent="MenuPrincipale/Soutien"]
margin_left = 7.0
margin_top = 7.0
margin_right = 203.0
margin_bottom = 263.0

[node name="Titre" type="Label" parent="MenuPrincipale/Soutien"]
margin_left = 7.0
margin_top = 93.0
margin_right = 203.0
margin_bottom = 177.0
custom_fonts/font = SubResource( 3 )
text = "support"

[node name="Money" type="PanelContainer" parent="MenuPrincipale"]
margin_left = 1139.0
margin_right = 1409.0
margin_bottom = 270.0

[node name="TextureRect" type="TextureRect" parent="MenuPrincipale/Money"]
margin_left = 46.677
margin_right = 302.677
margin_bottom = 256.0
texture = ExtResource( 10 )

[node name="Label" type="Label" parent="MenuPrincipale/Money"]
margin_left = 32.339
margin_top = 100.692
margin_right = 74.339
margin_bottom = 184.692
custom_fonts/font = SubResource( 4 )
text = "17"
align = 1

[node name="Attaque" type="PopupMenu" parent="."]
margin_top = 100.0
margin_right = 558.0
margin_bottom = 374.0
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Attaque"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Liere" type="PanelContainer" parent="Attaque/HBoxContainer"]
margin_right = 270.0
margin_bottom = 270.0
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Attaque/HBoxContainer/Liere"]
margin_left = 7.0
margin_top = 7.0
margin_right = 263.0
margin_bottom = 263.0
texture = ExtResource( 1 )

[node name="Ronces" type="PanelContainer" parent="Attaque/HBoxContainer"]
margin_left = 274.0
margin_right = 544.0
margin_bottom = 270.0
mouse_default_cursor_shape = 2

[node name="TextureRect" type="TextureRect" parent="Attaque/HBoxContainer/Ronces"]
margin_left = 7.0
margin_top = 7.0
margin_right = 263.0
margin_bottom = 263.0
texture = ExtResource( 6 )

[node name="Auxilliaire" type="PopupMenu" parent="."]
margin_left = 7.0
margin_top = 93.0
margin_right = 566.0
margin_bottom = 374.0
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="Auxilliaire"]
margin_left = 7.0
margin_top = 7.0
margin_right = 551.0
margin_bottom = 277.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tournessole" type="PanelContainer" parent="Auxilliaire/VBoxContainer"]
margin_right = 270.0
margin_bottom = 270.0
mouse_default_cursor_shape = 2

[node name="TextureRect" type="TextureRect" parent="Auxilliaire/VBoxContainer/Tournessole"]
margin_left = 7.0
margin_top = 7.0
margin_right = 263.0
margin_bottom = 263.0
texture = ExtResource( 3 )

[node name="Consoude" type="PanelContainer" parent="Auxilliaire/VBoxContainer"]
margin_left = 274.0
margin_right = 544.0
margin_bottom = 270.0
mouse_default_cursor_shape = 2

[node name="TextureRect" type="TextureRect" parent="Auxilliaire/VBoxContainer/Consoude"]
margin_left = 7.0
margin_top = 7.0
margin_right = 263.0
margin_bottom = 263.0
texture = ExtResource( 14 )

[node name="Biomasse" type="PopupMenu" parent="."]
margin_left = 14.0
margin_top = 93.0
margin_right = 843.0
margin_bottom = 367.0
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="Biomasse"]
margin_left = 7.0
margin_top = 7.0
margin_right = 825.0
margin_bottom = 277.0

[node name="Eucalyptus" type="PanelContainer" parent="Biomasse/VBoxContainer"]
margin_right = 270.0
margin_bottom = 270.0
mouse_default_cursor_shape = 2

[node name="TextureRect" type="TextureRect" parent="Biomasse/VBoxContainer/Eucalyptus"]
margin_left = 7.0
margin_top = 7.0
margin_right = 263.0
margin_bottom = 263.0
texture = ExtResource( 7 )

[node name="Sequoia" type="PanelContainer" parent="Biomasse/VBoxContainer"]
margin_left = 274.0
margin_right = 544.0
margin_bottom = 270.0
mouse_default_cursor_shape = 2

[node name="TextureRect" type="TextureRect" parent="Biomasse/VBoxContainer/Sequoia"]
margin_left = 7.0
margin_top = 7.0
margin_right = 263.0
margin_bottom = 263.0
texture = ExtResource( 4 )

[node name="Herbe" type="PanelContainer" parent="Biomasse/VBoxContainer"]
margin_left = 548.0
margin_right = 818.0
margin_bottom = 270.0
mouse_default_cursor_shape = 2

[node name="TextureRect" type="TextureRect" parent="Biomasse/VBoxContainer/Herbe"]
margin_left = 7.0
margin_top = 7.0
margin_right = 263.0
margin_bottom = 263.0
texture = ExtResource( 15 )

[node name="Soutien" type="PopupMenu" parent="."]
margin_left = 7.0
margin_top = 107.0
margin_right = 558.0
margin_bottom = 384.0
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="Soutien"]
margin_left = 7.0
margin_top = 7.0
margin_right = 551.0
margin_bottom = 277.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mycellium" type="PanelContainer" parent="Soutien/VBoxContainer"]
margin_right = 270.0
margin_bottom = 270.0
mouse_default_cursor_shape = 2

[node name="TextureRect" type="TextureRect" parent="Soutien/VBoxContainer/Mycellium"]
margin_left = 7.0
margin_top = 7.0
margin_right = 263.0
margin_bottom = 263.0
texture = ExtResource( 5 )

[node name="Champignon" type="PanelContainer" parent="Soutien/VBoxContainer"]
margin_left = 274.0
margin_right = 544.0
margin_bottom = 270.0
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Soutien/VBoxContainer/Champignon"]
margin_left = 7.0
margin_top = 7.0
margin_right = 263.0
margin_bottom = 263.0
texture = ExtResource( 2 )
[connection signal="mouse_entered" from="MenuPrincipale/Attaque" to="." method="_on_Attaque_mouse_entered"]
[connection signal="mouse_entered" from="MenuPrincipale/Auxiliaire" to="." method="_on_Auxiliaire_mouse_entered"]
[connection signal="mouse_entered" from="MenuPrincipale/Biomasse" to="." method="_on_Biomasse_mouse_entered"]
[connection signal="mouse_entered" from="MenuPrincipale/Soutien" to="." method="_on_Soutien_mouse_entered"]
[connection signal="gui_input" from="Attaque/HBoxContainer/Liere" to="." method="_on_Liere_gui_input"]
[connection signal="gui_input" from="Attaque/HBoxContainer/Ronces" to="." method="_on_Ronces_gui_input"]
[connection signal="gui_input" from="Auxilliaire/VBoxContainer/Tournessole" to="." method="_on_Tournessole_gui_input"]
[connection signal="gui_input" from="Auxilliaire/VBoxContainer/Consoude" to="." method="_on_Consoude_gui_input"]
[connection signal="gui_input" from="Biomasse/VBoxContainer/Eucalyptus" to="." method="_on_Eucalyptus_gui_input"]
[connection signal="gui_input" from="Biomasse/VBoxContainer/Sequoia" to="." method="_on_Sequoia_gui_input"]
[connection signal="gui_input" from="Biomasse/VBoxContainer/Herbe" to="." method="_on_Herbe_gui_input"]
[connection signal="gui_input" from="Soutien/VBoxContainer/Mycellium" to="." method="_on_Mycellium_gui_input"]
[connection signal="gui_input" from="Soutien/VBoxContainer/Champignon" to="." method="_on_Champignon_gui_input"]
